feat: adds search user by email
