# backend/http/dto/category.go
@@ -1,0 +1,11 @@
+package dto
+
+type CategoryResponse struct {
+	ID    int64  `json:"id" example:"1"`
+	Title string `json:"title" example:"Keyboard"`
+}
+
+type ListCategoryResponse struct {
+	Data  []CategoryResponse `json:"data"`
+	Total int                `json:"total"`
+}
